# ai-trial

./: .gitignore  README.md  result.txt
mission16/prj_dir/: .gitignore  .mcpbignore  README.md  main.py  manifest.json  manifest_uvx.json  pvv-mcp-server.yaml  pyproject.toml  requirements.txt  server.json
mission16/prj_dir/pvv_mcp_server/: main.py  mod_avatar_manager.py  mod_avatar_manager_bk.py  mod_emotion.py  mod_emotion_kurono_neko.py  mod_emotion_metan_aska.py  mod_emotion_tumugi_reimu.py  mod_emotion_zunda_marisa.py  mod_service.py  mod_speak.py  mod_speak_kurono.py  mod_speak_kurono_neko.py  mod_speak_metan_aska.py  mod_speak_tumugi_reimu.py  mod_speak_zunda_marisa.py  mod_speaker_info.py  mod_speakers.py
mission16/prj_dir/pvv_mcp_server/avatar/: mod_avatar.py  mod_avatar_dialog.py  mod_avatar_manager.py  mod_avatar_part.py  mod_load_image.py  mod_load_pixmaps.py  mod_right_click_context_menu.py  mod_update_frame.py  mod_update_position.py  mod_ymm_avatar copy.py  mod_ymm_avatar.py  mod_ymm_dialog copy.py  mod_ymm_dialog.py  mod_ymm_part.py
mission16/prj_dir/tests/: test_avatar_manager.py  test_emotion.py  test_service.py  test_speak.py  test_speak_metan_aska.py  test_speakers.py
mission16/prj_dir/tests/avatar/: test_avatar_part.py  test_load_image.py  test_right_click_context_menu.py  test_update_frame.py  test_update_position.py
mission16/prj_dir/voicevox_mcp_server/: main.py  mod_service.py  mod_speak_metan_aska.py
mission16/prj_dir/voicevox_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+203 files in other folders)
